- Change session[s].ip to 0 if set from RADIUS to 255.255.255.254;
  avoids the possibility that it will be interpreted as a valid IP
  address.
- Avoid a possible buffer overflow in processpap.
- Kill session if authentication was rejected.
- Simplify AVP unhiding code.
- Add optional "username" parameter to ungarden control, allowing the
  username to be reset before going online.
- Add result/error codes to StopCCN when shutting down tunnels.

* Fri Dec 17 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.13
- Better cluster master collision resolution: keep a counter of state
  changes, propagated in the heartbeats; the master with the highest #
  of changes (that has kept in contact with the LAC through the
  outage) prevails.
- Skip newlines in ringbuffer messages to CLI.
- Drop "Session N is closing" message level to 4; don't process PPPIP
  packets in this state.
- Use gzip --best for man pages, include pid_file in sample
  startup-config (from Jonathan's Debian package patches).
- Read multiple packets off cluster_sockfd as well as udpfd, tunfd in an
  attempt to avoid losing the cluster in high load (DoS) conditions.
- Add counters for select_called, multi_read_used and multi_read_exceeded.
- Compress logs.
- Retain counters of shutdown sessions to dump once per minute.
- Use standard uintN_t types for portability.

* Wed Dec 1 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.12
- The "This time, for sure!" release.
- Fix throttlectl plugin argument parsing.

* Wed Dec 1 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.11
- Don't send a RADIUS start record when ungardening on shutdown.

* Wed Dec 1 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.10
- Fix byte ordering of LCP header length (thanks Yuri).
- Increase ip_conntrack_max due to dropped packets.

* Tue Nov 30 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.9
- Revise CCP, send ConfigReq once only.
- Don't copy the old buffer into Config{Nak,Rej} LCP responses (oops);
  add length checks when appending.